# AI_Agents

./: .gitignore  LangChainAgents.ipynb  README.md  openAIBot.ipynb
Agentic_AI/: README.md  pyproject.toml  requirements.txt
Agentic_AI/1-BasicChatbot/: 1-BasicChatbot.ipynb
LangChainResearchAIAgent/: main.py  tools.py
Streamlit_AI_Agent/: personal_ai_agent.py  personal_ai_agent_dynamic.py
ollama_With_RAG_AI_Agent/: main.py  vector.py
ollama_chatbot_server/: app.py
ollama_chatbot_server/static/: script.js
ollama_chatbot_server/templates/: index.html
ollama_chatbot_web/: package-lock.json  package.json
ollama_chatbot_web/src/: App.js
ollama_chatbot_web/src/components/: Header.tsx
ollama_chatbot_web/src/pages/: Chat.tsx  Dashboard.tsx
